--- a/popup.html
+++ b/popup.html
@@ -104,6 +104,9 @@
       <p id="price-name">Check Price Trend</p>
       <a class="price-anchor" href="price.html"> → </a>
     </div>
+    <p id="datadisplay">
+      content here
+    </p>
     <script src="popup.js"></script>
   </div>
 </body>
